# api_auto

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  conftest.py  pyproject.toml
clients/database/: builder.py  client.py
clients/database/gateway/accounts/: client.py  schema.py
clients/database/gateway/cards/: client.py  schema.py
clients/database/gateway/operations/: client.py  schema.py
clients/database/gateway/users/: client.py  schema.py
clients/http/: builder.py  client.py
clients/http/gateway/: error_schema.py  public_builder.py
clients/http/gateway/accounts/: client.py  schema.py
clients/http/gateway/cards/: client.py  schema.py
clients/http/gateway/documents/: client.py  schema.py
clients/http/gateway/operations/: client.py  schema.py
clients/http/gateway/users/: client.py  schema.py
clients/kafka/: builder.py  consumer.py  producer.py
clients/kafka/gateway/documents/: client.py  schema.py
fixtures/: accounts.py  cards.py  database.py  documents.py  kafka.py  operations.py  users.py
tests/accounts/get/accounts/: test_get_accounts.py
tests/users/get/get_user/: test_get_user.py
tests/users/post/create_user/: test_create_users.py
tools/: fakers.py  logger.py
tools/assertions/: base.py  errors.py  http.py  users.py
tools/database/: db_names.py
tools/http/: curl.py  http_routes.py
tools/kafka/: topics.py
tools/schema/: schema_helpers.py
