[project]
name = "api-auto"
version = "0.1.0"
description = "API automation testing framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest>=2.16.0",
    "faker>=30.0.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "confluent-kafka>=2.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.0.0",
    "ruff>=0.14.0",
    "types-requests>=2.32.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-s",
    "-v",
    "--strict-markers",
    "--strict-config",
    "--alluredir=allure-results",
    "--clean-alluredir",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "PL",
    "RUF",
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
pretty = true
